import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
import dev.puzzleshq.accesswriter.AccessWriters
import me.lucko.jarrelocator.JarRelocator
import me.lucko.jarrelocator.Relocation
import dev.puzzleshq.buildsrc.GenericTransformer
import static org.gradle.api.artifacts.transform.TransformParameters.None

plugins {
    id 'java'
    id 'maven-publish'
    id("io.github.sgtsilvio.gradle.maven-central-publishing") version "0.4.0"
    id 'com.gradleup.shadow' version '8.3.6'
}

var manipulator = file("$projectDir/src/common/resources/puzzle-loader-core.manipulator")

def ref = System.getenv("GITHUB_REF")
version = (ref != null && ref.startsWith("refs/tags/")) ? ref.tokenize('/').last().replaceFirst(/^v/, '') : p_version

String mavenUrl = System.getenv("MAVEN_URL")

String envRepo = System.getenv("MAVEN_REPO")
String mavenRepo = envRepo != null ? envRepo : "releases"

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = '8'
    targetCompatibility = '8'
}

sourceSets {
    common
    client
}

configurations {

    allCompileOnly
    clientCompilyOnly.extendsFrom(allCompileOnly)
    commonCompilyOnly.extendsFrom(allCompileOnly)

    clientBundle
    clientImplementation.extendsFrom(clientBundle)

    clientInternal
    clientImplementation.extendsFrom(clientInternal)

    commonBundle
    commonImplementation.extendsFrom(commonBundle)
    clientImplementation.extendsFrom(commonBundle)

    clientNative
    clientImplementation.extendsFrom(clientNative)

    clientImpl
    clientImplementation.extendsFrom(clientImpl)
}

def natives(String lwjgl_natives) {
    dependencies {
        clientNative "org.lwjgl:lwjgl:$lwjgl_version:$lwjgl_natives"
        clientNative "org.lwjgl:lwjgl-opengl:$lwjgl_version:$lwjgl_natives"
        clientNative "org.lwjgl:lwjgl-glfw:$lwjgl_version:$lwjgl_natives"
    }
}

FileInputStream stream = new FileInputStream(manipulator)
byte[] bytes = stream.readAllBytes()
stream.close()
String str = new String(bytes)

AccessWriters.init(null)
AccessWriters.MERGED.add(AccessWriters.getFormat("manipulator").parse(str))

abstract class MyTransform implements TransformAction<None> {

    @InputArtifact
    abstract Provider<FileSystemLocation> getInputArtifact();

    @SuppressWarnings("unused")
    void transform(TransformOutputs outputs) {
        var inp = inputArtifact.get().asFile
        var out = outputs.file(inp.name.replace(".jar", "-transformed.jar"))

        List<Relocation> rules = new ArrayList<>()
//        rules.add(new Relocation("org.objectweb", "bundled.org.objectweb"))
//        rules.add(new Relocation("org.spongepowered.include", "bundled"))

        JarRelocator relocator = new JarRelocator(inp, out, rules);
        relocator.run();

        GenericTransformer.transform(out)
    }
}

Attribute<Boolean> manipulated = Attribute.of("manipulated", Boolean.class)

afterEvaluate {
    project.getDependencies().getAttributesSchema().attribute(manipulated);
    project.getDependencies().getArtifactTypes().named("jar", artifact -> {
        artifact.getAttributes().attribute(manipulated, false)
    })

    project.getDependencies().registerTransform(MyTransform) {
        getFrom().attribute(manipulated, false)
        getTo().attribute(manipulated, true)
    }

    project.getConfigurations().configureEach(config -> {
        if (config.isCanBeResolved())
            config.getAttributes().attribute(manipulated, true)
    })
}

// Common Dependencies
dependencies {
    clientImplementation 'org.jetbrains:annotations:24.0.0'

    clientImpl "org.lwjgl:lwjgl:$lwjgl_version"
    clientImpl "org.lwjgl:lwjgl-opengl:$lwjgl_version"
    clientImpl "org.lwjgl:lwjgl-glfw:$lwjgl_version"

    natives("natives-linux")
    natives("natives-linux-arm32")
    natives("natives-linux-arm64")
    natives("natives-macos")
    natives("natives-macos-arm64")
    natives("natives-windows")
    natives("natives-windows-arm64")
    natives("natives-windows-x86")

    clientInternal sourceSets.common.output

    // Common
    commonImplementation 'org.jetbrains:annotations:24.0.0'

    commonBundle annotationProcessor("io.github.llamalad7:mixinextras-fabric:$mixin_extras_version")
    commonBundle("net.fabricmc:sponge-mixin:$mixin_version") {
        exclude group: "com.google.code.gson", module: "gson"
        exclude group: "com.google.guava", module: "guava"
    }
    commonBundle "net.sf.jopt-simple:jopt-simple:$jopt_simple_version"

    commonBundle "com.github.villadora:semver:0.0.3"

    commonBundle "org.apache.logging.log4j:log4j-api:$log4j_version"
    commonBundle "org.apache.logging.log4j:log4j-core:$log4j_version"
    commonBundle "org.apache.logging.log4j:log4j-slf4j-impl:$log4j_version"

    commonBundle "org.reflections:reflections:$reflections_version"

    commonBundle "org.ow2.asm:asm:$asm_version"
    commonBundle "org.ow2.asm:asm-tree:$asm_version"
    commonBundle "org.ow2.asm:asm-util:$asm_version"
    commonBundle "org.ow2.asm:asm-analysis:$asm_version"
    commonBundle "org.ow2.asm:asm-commons:$asm_version"

    commonBundle "dev.puzzleshq:puzzle-annotations:1.0.0"
    commonBundle "dev.puzzleshq:access-writer:1.0.4+c"
    commonBundle "dev.puzzleshq:mod-format-framework:1.1.1"

    commonBundle "org.hjson:hjson:$hjson_version"
}

tasks.register("buildMergedTestJar", ShadowJar) {
    ArrayList t = new ArrayList();
    Collections.addAll(t, project.configurations.clientInternal, project.configurations.commonBundle, project.configurations.clientBundle)
    configurations = t

    mergeServiceFiles()
    relocate("org.objectweb", "internal.org.objectweb")
    relocate("org.spongepowered.include", "internal")
    relocate("com.google.common.eventbus", "unused")

    archiveClassifier = "merged-test"
    from sourceSets.client.output
}

tasks.register("buildCommonJar", ShadowJar) {
    mergeServiceFiles()

    archiveClassifier = "common"
    from sourceSets.common.output
}

tasks.register("buildClientJar", ShadowJar) {
    mergeServiceFiles()

    archiveClassifier = "client"
    from sourceSets.client.output
}

tasks.register("buildSourcesJar", Jar) {
    from sourceSets.client.allSource
    from sourceSets.common.allSource
    archiveClassifier = "sources"
}

tasks.register("mkDeps") {
    File file = new File("$projectDir/dependencies.json")

    def repos = "["

    for (i in 0..<project.repositories.size()) {
        def dependency = project.repositories[i];
        if (dependency instanceof MavenArtifactRepository) {
            repos += """\n\t\t{
\t\t\t\"name\": \"${dependency.name}\",
\t\t\t\"url\": \"${dependency.url}\"
\t\t}""" + (i != project.repositories.size() - 1 ? "," : "")
        }
    }
    repos += "\n\t]"

    def contents = "{\n\t\"repos\": ${repos},\n\t\"common\": ["

    for (i in 0..<configurations.commonBundle.allDependencies.size()) {
        def dependency = configurations.commonBundle.allDependencies[i];
        contents += """\n\t\t{
\t\t\t\"groupId\": \"${dependency.group}\",
\t\t\t\"artifactId\": \"${dependency.name}\",
\t\t\t\"version\": \"${dependency.version}\",
\t\t\t\"type\": \"implementation\"
\t\t}""" + (i != configurations.commonBundle.allDependencies.size() - 1 ? "," : "")
    }
    contents += "\n\t],\n\t\"client\": ["

    for (i in 0..<configurations.clientImpl.allDependencies.size()) {
        def dependency = configurations.clientImpl.allDependencies[i];
        contents += """\n\t\t{
\t\t\t\"groupId\": \"${dependency.group}\",
\t\t\t\"artifactId\": \"${dependency.name}\",
\t\t\t\"version\": \"${dependency.version}\",
\t\t\t\"type\": \"compileOnly\"
\t\t}""" + (i != configurations.clientImpl.allDependencies.size() - 1 ? "," : "")
    }
    contents += "\n\t]"

    file.write(contents + "\n}")
}

processCommonResources {
    Map<String, Object> replacement_properties = [
            "version": ((String)version).contains(".") ? version : "69.69.69",
            "mixinVersion": mixin_version,
    ]

    inputs.properties replacement_properties

    filesMatching(["assets/puzzle-loader-core/core-version.txt", "assets/puzzle-loader-core/mixin-version.txt"]) {
        expand replacement_properties
    }
}

publishing {
    repositories {
        maven {
            name = "PuzzleHQsMaven"
            url = mavenUrl+ "/" +mavenRepo
            credentials {
                username = System.getenv("MAVEN_NAME")
                password = System.getenv("MAVEN_SECRET")
            }
            authentication {
                basic(BasicAuthentication)
            }
        }
        mavenLocal()
    }

    publications {
        maven(MavenPublication) {
            groupId = p_group
            artifactId = p_id

            artifact source: buildClientJar, classifier: 'client', extension: 'jar'
            artifact source: buildCommonJar, classifier: 'common', extension: 'jar'
            artifact source: buildSourcesJar, classifier: 'sources', extension: 'jar'

            pom {
                name = p_name
                description = p_desc
                url = p_git

                dependencies {
                }

                licenses {
                    license {
                        name = "GNU Lesser General Public License"
                        url = "https://www.gnu.org/licenses/lgpl-3.0.html"
                        distribution = "LGPL"
                        comments = "This project includes LGPL-licensed components."
                    }
                }

                developers {
                    developer {
                        id = 'mrzombii'
                        name = 'Mr Zombii'
                        email = 'thezombiigames@gmail.com'
                    }
                }
                scm {
                    connection = "${p_git}.git"
                    developerConnection = "${p_git}.git"
                    url = "${p_git}.git"
                }
            }
        }
    }
}

if (ref != null) {
    signing {
        useGpgCmd()
        sign(publishing.publications[0])
    }
}

wrapper {
    gradleVersion = "8.14"
    distributionType = Wrapper.DistributionType.ALL
}

java.toolchain.languageVersion.set(JavaLanguageVersion.of("8"))

//java.toolchain.languageVersion.set(JavaLanguageVersion.of(17))
